--- a/pricenegotiator/templates/base.html
+++ b/pricenegotiator/templates/base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +10,39 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap JS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>E-commerce</title>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-primary bg-gradient">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            GadgetBot
-          </a>
-        </div>
-      </nav>
+  <div class="header">
+    <div class="container">
+    <div class="navbar">
+         <div class="logo">
+             <img src="{% static 'images/gadget.jpg' %}" width="100px">
+         </div>
+
+         <nav>
+             <ul>
+                 <li><a href="">Home</a></li>
+                 <li><a href="">Contact Us</a></li>
+                 <li><a href=""><img src="{% static 'images/cart.png' %}" width="30px" height="30px"></a></li>
+             </ul>
+         </nav>
+     </div>
+     <div class="row">
+         <div class="col-2">
+             <h1>Buy Electronics <br> At One Stop!</h1>
+             <p>Here, you can buy every electronics at reasonable price.</p>
+             <a href="" class="btn">Explore Now &#8594;</a>
+         </div>
+         <div class="col-2">
+             <img src="{% static 'images/wallpaper2.jpg' %}">
+         </div>
+     </div>
+ </div>
+</div>
     {% block content %}
     {% endblock content %}
 </body>
