feat: order place finished

--- a/WebApplication/pricenegotiator/templates/base.html
+++ b/WebApplication/pricenegotiator/templates/base.html
@@ -14,36 +14,86 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>E-commerce</title>
+    <script type="text/javascript">
+        var user = '{{request.user}}'
+
+        function getToken(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+        var csrftoken = getToken('csrftoken')
+        
+        function getCookie(name) {
+		    // Split cookie string and get all individual name=value pairs in an array
+		    var cookieArr = document.cookie.split(";");
+
+		    // Loop through the array elements
+		    for(var i = 0; i < cookieArr.length; i++) {
+		        var cookiePair = cookieArr[i].split("=");
+
+		        /* Removing whitespace at the beginning of the cookie name
+		        and compare it with the given string */
+		        if(name == cookiePair[0].trim()) {
+		            // Decode the cookie value and return
+		            return decodeURIComponent(cookiePair[1]);
+		        }
+		    }
+
+		    // Return null if not found
+		    return null;
+		}
+		var cart = JSON.parse(getCookie('cart'))
+
+		if (cart == undefined){
+			cart = {}
+			document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
+		}
+    </script>
 </head>
 <body>
-  <div class="header">
-    <div class="container">
-    <div class="navbar">
-         <div class="logo">
-             <img src="{% static 'images/gadget.jpg' %}" width="100px">
-         </div>
+    <div class="wrapper">
+        <div class="header">
+            <div class="container">
+                <div class="navbar">
+                    <div class="logo">
+                        <img src="{% static 'images/gadget.jpg' %}" width="100px">
+                    </div>
 
-         <nav>
-             <ul>
-                 <li><a href="">Home</a></li>
-                 <li><a href="">Contact Us</a></li>
-                 <li><a href=""><img src="{% static 'images/cart.png' %}" width="30px" height="30px"></a></li>
-             </ul>
-         </nav>
-     </div>
-     <div class="row">
-         <div class="col-2">
-             <h1>Buy Electronics <br> At One Stop!</h1>
-             <p>Here, you can buy every electronics at reasonable price.</p>
-             <a href="" class="btn">Explore Now &#8594;</a>
-         </div>
-         <div class="col-2">
-             <img src="{% static 'images/wallpaper2.jpg' %}">
-         </div>
-     </div>
- </div>
-</div>
-    {% block content %}
-    {% endblock content %}
+                    <nav class="form-inline">
+                        <a class="px-3" href="/">Home</a>
+                        <a class="pl-2" href="{% url 'cart' %}"><img src="{% static 'images/cart.png' %}" width="30px" height="30px"></a></li>
+                        {% if cartItems != 0 %}
+                        <p id="cart-total">{{cartItems}}</p>
+                        {% endif %}
+                    </nav>
+                </div>
+                {% block banner %}
+                {% endblock banner %}
+            </div>
+        </div>
+        {% block content %}
+        {% endblock content %}
+        <div class="push"></div>
+    </div>
+    <!-- Footer -->
+    <div class="footer">
+        <div class="container">
+            <h4> <footer> <small>&copy; Copyright 2022, Gadgetbot </small> </footer> </h3>
+            </div>
+
+        </div>
+    </div>
+    <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
 </body>
 </html>
