--- a/WebApplication/pricenegotiator/static/css/style.css
+++ b/WebApplication/pricenegotiator/static/css/style.css
@@ -1,142 +1,308 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing:border-box;
-   
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family: 'Poppins', sans-serif;
-}
-.navbar{
-    display:flex;
-    align-items:center;
-    padding: 20px;
+html,
+body {
+  height: 100%;
 }
 
-nav{
-    flex: 1;
-    text-align: right;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-nav ul{
-    display:inline-block;
-    list-style-type:none;
+.wrapper {
+  min-height: 100%;
+  height: auto !important;
+  margin: 0 auto -40px; /* the bottom margin is the negative value of the footer's height */
 }
 
-nav ul li{
-    display:inline-block;
-    margin-right: 20px;
+.navbar {
+  display: flex;
+  align-items: center;
+  padding: 20px;
 }
 
-a{
-    text-decoration: none;
-    color:#555;
+nav {
+  flex: 1;
+  text-align: right;
 }
 
-p{
-    color:#555;
+nav ul {
+  display: inline-block;
+  list-style-type: none;
 }
 
-.container{
-    max-width: 1300px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-
-}
-.row{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-.col-2{
-    flex-basis: 50%;
-    min-width: 300px;
-}
-.col-2 img{
-    max-width: 100%;
-    padding: 50px 0;
+nav ul li {
+  display: inline-block;
+  margin-right: 20px;
 }
 
-.col-2 h1{
-    font-size: 50px;
-    line-height: 60px;
-    margin: 25px 0;
-}
-.header{
-    background:radial-gradient(#fff,#ffd6d6);
+a {
+  text-decoration: none;
+  color: #555;
 }
 
-.header .row{
-    margin: top 70px;
-
+p {
+  color: #555;
 }
 
-.btn{
-    display:inline-block;
-    background: #ff523b;
-    color:#fff;
-    padding: 8px 30px;
-    margin: 30px 0;
-    border-radius: 30px;
-    transition: background 0.5s;
+.container {
+  max-width: 1300px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.col-2 {
+  flex-basis: 50%;
+  min-width: 300px;
+}
+.col-2 img {
+  max-width: 100%;
+  padding: 50px 0;
 }
 
-.btn:hover{
-    background: #563434;
+.col-2 h1 {
+  font-size: 50px;
+  line-height: 60px;
+  margin: 25px 0;
 }
-.small-container{
-    max-width: 1080px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
+.header {
+  background: radial-gradient(#fff, #ffd6d6);
 }
-.col-3{
-    flex-basis: 25%;
-    padding: 10px;
-    min-width: 200px;
-    margin-bottom: 30px;
-    transition: transform 0.5s;
+
+.header .row {
+  margin: top 70px;
 }
-.col-3 h4{
-    font-size: 20px;
+
+.btn {
+  display: inline-block;
+  background: #ff523b;
+  padding: 8px 30px;
+  margin: 30px 0;
+  border-radius: 30px;
+  transition: background 0.5s;
 }
-.col-3 img{
-    width: 100%;
-    height: 243px;
-    padding: 50px;
-    object-fit: contain;
+
+.btn:hover {
+  background: #563434;
+  color: white !important;
+  transition: background 0.5s;
 }
-.title{
-    text-align: center;
-    margin: 0 auto 30px;
-    position: relative;
-    line-height: 60px;
-    color: #555;
+.small-container {
+  max-width: 1080px;
+  margin: auto;
+  padding: 0 25px;
 }
-.title::after{
-    content: '';
-    background:#ff523b;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform:translateX(-50%) ;
+.col-3 {
+  flex-basis: 25%;
+  padding: 10px;
+  min-width: 200px;
+  margin-bottom: 50px;
+  transition: transform 0.5s;
 }
-.h4{
-    color: #555;
-    font-weight: normal;
+.col-3 h4 {
+  font-size: 20px;
 }
-.col-3 p{
-    font-size: 14px;
+
+.col-3 img {
+  width: 100%;
+  padding: 50px;
 }
-.col-3:hover{
-    transform: translateY(-5px);
+.title {
+  text-align: center;
+  margin: 0 auto 80px;
+  position: relative;
+  line-height: 60px;
+  color: #555;
 }
-/*.product_img {*/
-/*    width: 300px;*/
-/*    height: auto;*/
-/*}*/
+.title::after {
+  content: "";
+  background: #ff523b;
+  width: 80px;
+  height: 5px;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.h4 {
+  color: #555;
+  font-weight: normal;
+}
+/* .col-3 p {
+  font-size: 14px;
+} */
+.col-3:hover {
+  transform: translateY(-5px);
+}
+
+.display-price {
+  font-size: 18px;
+  font-weight: bold;
+}
+/*---- Single Product Details----*/
+
+.small-container {
+  margin-top: 80px;
+}
+
+.small-container .col-2 img {
+  padding: 0;
+}
+
+.small-container .col-2 {
+  padding: 20px;
+}
+
+.single-product h1 {
+  font-size: 32px;
+  line-height: 42px;
+}
+
+.single-product h4 {
+  margin: 20px 0;
+  font-size: 22px;
+  font-weight: bold;
+}
+.single-product input {
+  width: 70px;
+  height: 30px;
+  padding-left: 10px;
+  font-size: 20px;
+  margin-right: 10px;
+  border: 1px solid #ff523b;
+}
+
+.single-product a {
+  margin-left: 70px;
+}
+
+.footer {
+  background: #000;
+  color: #8a8a8a;
+  font-size: smaller;
+  padding: 30px 0 10px;
+}
+
+.footer,
+.push {
+  height: 90px; /* .push must be the same height as .footer */
+}
+
+.footer h4 {
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+/*---- Cart items----*/
+.cart-page {
+  margin: 80px auto;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.cart-info {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+th {
+  text-align: left;
+  padding: 5px;
+  color: #fff;
+  background: #ff523b;
+  font-weight: normal;
+}
+
+td {
+  padding: 10px 5px;
+}
+
+td input {
+  width: 40px;
+  height: 30px;
+  padding: 5px;
+}
+
+td img {
+  width: 80px;
+  height: 80px;
+  margin-right: 10px;
+}
+
+.chg-btn-icon {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  margin: 0;
+}
+
+.order-total {
+  padding: 5px;
+  border: 2px solid #ff523b;
+}
+
+#cart-total {
+  display: inline-block;
+  text-align: center;
+  color: #fff;
+  background-color: #ff523b;
+  border-radius: 50%;
+  font-size: 14px;
+  padding: 2px 8px;
+}
+
+/* checkout */
+.total-price {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.total-price table {
+  border-top: 3px solid #ff523b;
+  width: 100%;
+  max-width: 500px;
+}
+
+/*---- Customer Details / order summary----*/
+
+.box-element {
+  box-shadow: hsl(0, 40%, 79%);
+  background-color: #f8e4e4;
+  border-radius: 4px;
+  padding: 10px;
+}
+
+.col-lg-6 {
+  margin-top: 10px;
+}
+
+.form-field {
+  width: 250px;
+  display: inline-block;
+  padding: 10px;
+  border-radius: 3px;
+}
+
+.btn1 {
+  display: inline-block;
+  background: #ff523b;
+  color: #fff;
+  padding: 8px 30px;
+  margin: 30px 0;
+  margin-left: 370px;
+  margin-right: 10px;
+  border-radius: 30px;
+  transition: background 0.5s;
+}
