order confirmed page added

--- a/WebApplication/pricenegotiator/static/css/style.css
+++ b/WebApplication/pricenegotiator/static/css/style.css
@@ -306,3 +306,10 @@ td img {
   border-radius: 30px;
   transition: background 0.5s;
 }
+
+.col-4 img {
+  width: 70%;
+  height: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
