--- a/WebApplication/pricenegotiator/templates/checkout.html
+++ b/WebApplication/pricenegotiator/templates/checkout.html
@@ -148,7 +148,7 @@
 
 				cart = {}
 				document.cookie ='cart=' + JSON.stringify(cart) + ";domain=;path=/"
-                window.location.href = "{% url 'home' %}"
+                window.location.href = "{% url 'order-completed' %}"
             })
 	    }
 </script>
