--- a/WebApplication/pricenegotiator/templates/checkout.html
+++ b/WebApplication/pricenegotiator/templates/checkout.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="small-container order-detail">
     <div class="row align-items-start">
@@ -152,4 +153,5 @@
             })
 	    }
 </script>
+
 {% endblock %}
