--- a/WebApplication/pricenegotiator/templates/thankyou.html
+++ b/WebApplication/pricenegotiator/templates/thankyou.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="row">
+<div class="row mt-5">
     <div class="col-4">
         <h1>Thank You!</h1>
         <h1>Your Order has been confirmed.</h1>
         <p>You will be recieving a confirmation email with order details.</p>
-        <a href="" class="btn"> Continue Shopping &#8594;</a>
+        <a href="/" class="btn"> Continue Shopping &#8594;</a>
     </div>
     <div class="col-4">
         <img src="{% static 'images/tick.png' %}">
